--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,9 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Fixed an issue that causes hanging queries if a data node disconnects from
+   the cluster.
+
  - Fixed an issue that causes UnhandledServerException on joins
    when ``WHERE`` clause contains conditions on columns of array type
    of both tables which are separated with the ``OR` operator.
